# UBCRocketGroundStation

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  CreateStation.bat  DebugConnection.py  DebugConnectionFactory.py  GoogleMaps.py  GroundProcessing.py  GroundSerial.py  GroundStation.py  IConnection.py  IConnectionFactory.py  MapBox.py  MapData.py  MappingThread.py  Plotter.py  README.md  RadioController.py  Radio_Data.csv  ReadThread.py  RocketData.py  SDRead.py  SendThread.py  SerialConnection.py  SerialConnectionFactory.py  SerialThread.py  SimConnection.py  SimConnectionFactory.py  StreamLogger.py  SubpacketIDs.py  XBeeModuleSim.py  XBeeModuleSimTest.py  build.py  ci.sh  co_pilot.py  codecov.yml  comWindow.py  comWindow.ui  (+24 more)
.circleci/: config.yml
FW/: .gitignore  SIMtxlog.txt
com_window/: main.py
connections/: connection.py  connection_factory.py
download_window/: main.py
main_window/: accel_widget.py  accelwidget.py  aprs_gps_status.py  aprs_parser.py  aprs_thread.py  command_parser.py  data_entry_id.py  device_manager.py  kiss_server.py  main.py  main_app.py  mplwidget.py  nmea_gps_status.py  nmea_thread.py  packet_parser.py  radio_controller.py  read_thread.py  rocket_data.py  send_thread.py  subpacket_ids.py
mapping/: map_data.py  mapping_thread.py
mode_select/: main.py
ork/: Hollyburn CanSat Jan 20.ork  Silvertip-01-05-2022.ork  Sunburst - Dec 8.ork  simple.ork
profiles/: label.py  mpl_funcs.py  rocket_profile.py  rocket_profile_list.py
qt_files/: com_window.ui  comp_app.ui  downloader.ui  main.ui  mode_select.ui  mplwidget.py  wb_app.ui
tests/: README.md  test_MapBox.py  test_XBeeModuleSim.py  test_command_parser.py  test_device_manager.py  test_event_stats.py  test_hw_sim.py  test_mapbox_utils.py  test_rocket_data.py  test_rocket_sim.py  test_stream_filter.py  (+1 more)
(+50 files in other folders)
