[project]
name = "ubcrocketgroundstation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage==7.6.1",
    "mapbox==0.18.1",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "orhelper==0.1.3",
    "pillow==10.4.0",
    "pyinstaller==6.10",
    "pylint==3.3.1",
    "pyserial==3.5",
    "pytest-mock==3.14.0",
    "pytest-qt==4.4.0",
    "pytest==8.3.3",
    "pyqt5==5.15.11",
    "setuptools==75.1.0",
    "sortedcontainers==2.4.0",
    "pyqt5-qt5==5.15.2",
    "digi-xbee",
]

[tool.uv.sources]
digi-xbee = { git = "https://github.com/digidotcom/xbee-python", rev = "1.1.1" }
