[project]
name = "ubcrocketgroundstation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage==7.6.1",
    "mapbox==0.18.1",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "pillow==10.4.0",
    "pyinstaller==6.10",
    "pylint==3.3.1",
    "pyserial==3.5",
    "pytest-mock==3.14.0",
    "pytest-qt==4.4.0",
    "pytest==8.3.3",
    "pyqt5==5.15.11",
    "setuptools==75.1.0",
    "sortedcontainers==2.4.0",
    "pyqt5-qt5==5.15.15 ; platform_system != 'Windows'",
    "pyqt5-qt5==5.15.2 ; platform_system == 'Windows'",
    "digi-xbee",
    "wheel==0.41.2",
    "aprslib==0.7.2",
    "kiss",
    "aprs",
    "orhelper"
]

[tool.uv.sources]
digi-xbee = { git = "https://github.com/digidotcom/xbee-python", rev = "1.4.1" }
kiss = { path = "extra_dependencies/kiss-7.0.0.tar.gz" }
aprs = { path = "extra_dependencies/aprs-7.0.0.tar.gz" }
orhelper = { git = "https://github.com/jasonkwok475/orhelper", rev = "d809b3958deda9ad542119812f664a9e91a56c6b" }